# 3em

./: .dockerignore  .gitignore  .gitmodules  3em-evm-benchmark.json  3em-js-benchmark.json  3em-wasm-benchmark.json  Cargo.toml  Dockerfile  LICENSE  README.md  bench.json  build.rs  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml  release.yml
.github/workflows/: benchmarks.yml  build.yml  ci.yml  lint.yml  napi.yml  nodejs.yml  publish.yml  release.yml  release_binaries.yml  ship.yml  test.yml
benches/: README.md  v8_wasmer.rs  wasm.rs
cli/: Cargo.toml  dry_run.rs  local_server.rs  node.rs  run.rs  utils.rs
cli/messages/: mod.rs
crates/arweave/: Cargo.toml  arweave.rs  arweave_get_tag.rs  cache.rs  gql_result.rs  lib.rs  lru_cache.rs  main.rs  miscellaneous.rs  utils.rs
crates/base/: Cargo.toml  base.js  lib.rs
crates/cli/: Cargo.toml  core_nodes.rs  dry_run.rs  lib.rs  local_server.rs  main.rs  node.rs  node_crypto.rs  print_help.rs  run.rs  start.rs  three_em_arweave_docs.rs  utils.rs
crates/cli/cli/: parse.rs
crates/cli/messages/: get_addr.rs
crates/cli/metadata/: core_nodes.txt
crates/evm/: Cargo.toml  README.md  lib.rs  storage.rs  wevm.rs
crates/evm/wasm/: Makefile  README.md  evm.wasm  evm_test.ts  index.js
crates/executor/: Cargo.toml  executor.rs  lib.rs  simulate_contract.rs  test_util.rs  util.rs  utils.rs
crates/executor/js/: browser_test.html  index.js  load_test.ts
crates/exm/: Cargo.toml  base.js  lib.rs
crates/js/: Cargo.toml  build.rs  default_permissions.rs  fetch_permissions.rs  lib.rs  loader.rs
crates/js/lib/: index.js  rt_test.ts
crates/js/web/: index.js  rt_test.ts
crates/metering/: Cargo.toml  lib.rs
crates/smartweave/: Cargo.toml  arweave.js  contract-assert.js  env.js  lib.rs  smartweave.js
crates/wasm/: Cargo.toml  errors.js  errors.rs  lib.rs
crates/wasm/lib/: README.md  index.js  rt_test.ts
data/: benchmark.html  benchmark.json
docs/: dry_run.md  opcodes.md  technical_guide.md
docs/dry_run/: README.md  dry_run_contract.js  dry_run_users_contract.json
helpers/assemblyscript/: .gitignore  package.json  transform.js
helpers/cpp/: .gitignore  Makefile  README.md  contract.c  contract.wasm
helpers/rust/: Cargo.toml
helpers/rust/proc_macro/: Cargo.toml
helpers/rust/proc_macro/src/: lib.rs
helpers/swift/: contract.swift
helpers/zig/: Makefile  contract.zig
js/: .npmignore  README.md  executor.js  executor_test.html  executor_test.ts  getTagSource.js  index.js  loadContractSource.js  loadInteractionsSource.js  package-lock.json  package.json  playground.ts  sw.js  sw_test.ts  wasm.js  wasm_test.ts
js/evm/: Cargo.toml  Makefile  evm.wasm  evm_test.ts  lib.rs
js/napi/: .gitignore  Cargo.toml  index.d.ts  index.js  napi.test.js  package-lock.json  package.json  tests.js
js/napi/npm/darwin-arm64/: README.md  package.json
js/napi/npm/darwin-x64/: README.md  package.json
js/napi/npm/linux-x64-gnu/: README.md  package.json
js/napi/npm/win32-x64-msvc/: README.md  package.json
js/napi/src/: lib.rs
js/test-factory/: globals_test.ts  utils.ts
js/tests/: node.js  package.json
reactor/: Cargo.toml
src/: Cargo.toml  arweave.rs  bignumber.js  build.rs  contract-assert.js  core_nodes.rs  evm.rs  executor.rs  gql_result.rs  js.rs  lib.rs  loader.rs  lru_cache.rs  main.rs  metering.rs  miscellaneous.rs  node.rs  node_crypto.rs  run.rs  smartweave.js  smartweave.rs  snapshot_js.rs  start.rs  test_util.rs  utils.rs  wasm.rs
src/cli/: parse.rs
src/cli_commands/: mod.rs  start_cmd.rs
src/cli_flags/: cli_flags.rs  mod.rs
src/messages/: get_addr.rs
src/runtime/: bignumber.js  evm.rs  extensions.rs  metering.rs  mod.rs  module_loader.rs  smartweave.js  smartweave.rs  snapshot.rs  wasm.rs  wasmer.rs
src/runtime/core/: arweave.rs  arweave_get_tag.rs  execute.rs  gql_result.rs  miscellaneous.rs  mod.rs
src/runtime/testdata/: 01_wasm.rs
src/runtime/testdata/01_wasm/: 01_wasm.rs  01_wasm.wasm  Cargo.toml  Makefile  usage.js
src/runtime/testdata/02_wasm/: 02_wasm.wasm  README.md
src/runtime/testdata/metering/: add.metering.wasm  add.ts
src/vem_core/: core.rs
testdata/: README.md  sw_api_test.js  test_smartweave_ops_get_data.json
testdata/01_wasm/: 01_wasm.rs  01_wasm.wasm  Cargo.toml  Makefile  README.md
testdata/02_wasm/: main.ts  package.json
testdata/03_wasm/: 03_wasm.rs  03_wasm.wasm  Cargo.toml  Makefile
testdata/contracts/: ans.js  ans.json  ark.js  ark.json  counter.js  counter_error.js  delKv.js  deterministic-fetch.js  dry_run_users_contract.json  getKv.js  globals_contract.js  kv.js  kvMap.js  read_contact.js  sha256.js  user-registry2.js  user_function_specific_contract.js  users_contract.js
testdata/evm/: add.sol  counter  counter.sol  keccak245.yul  state1.sol
testdata/evolve/: evolve1.js
testdata/metering/: add.ts  add.wasm
testdata/sw/: -8A6RexFkpfWwuyVO98wzSFZh0d6VJuI-buTJvlwOJQ$$864568.json  -phOe9rYuCJDKAnWHHnbD33Wt-4eOU24PY6bGdmLaeQ$$864568.json  0GRLIbU0jmipa-jBuNjrshdBsrw96HTSVdCyLniF1Sg$$864568.json  0nLrjVVcPzRwZzhNpbdcvTY2o90ubC8w0vhwzUL75Z8$$864568.json  0zplqhFARjHyR-dBdNEY1TpZuKL0mWm--RFq6LByoew$$864568.json  2GX6k-mPCDpvwtujLktzmyM5y-2H_43craxB35u5tM0$$864568.json  2J3F5M6bWqxu_vxBabgQGIa9C0ZX99wGMxU4xlsn29w$$864568.json  3N16hXrBQvNuJO6v4eqwGsmWeLAwccvQhS-Z6YqvRUM$$864568.json  3UZVBdPjnxaZkEBCEj4Zlre-yG_5VpWPZwE3WjMdoyo$$864568.json  3mBBO5RO4bwnOC3dJ7eW_H4alR3N_-Fo1tPZmkIz5Dw$$864568.json  58Zr9c25v3tjXNFdu1YRsZXB0qIl7kCXfbnXQqHQxIY$$864568.json  5Ls4wtKc5i2kYZd1HRugDFUBwzkuw3owN6fJ2dAeQvU$$864568.json  6PXsqnFEFMvC-4gCzmduO0qXwLUW9w8Jv1K-C332FaQ$$864568.json  6eTVr8IKPNYbMHVcpHFXr-XNaL5hT6zRJXimcP-owmo$$864568.json  6oWoFoECS-h1IViQ6b6zqtugSEkRyzVb5YxNgpWpyCA$$864568.json  7hVrRtwjs7XLPtpZsQMr6RPz19QjtTqQYpHy3rPEy-4$$864568.json  (+153 more)
tools/: mean.py  times.py
tools/benchmarks/: benchmark.sh  benchmark.ts  (+13 more)
tools/benchmarks/3em/: Cargo.toml  evm.rs  js_mem.rs  main.rs  main_fh.rs  wasm.rs
traits/: Cargo.toml  lib.rs  prelude.rs
v8/: Cargo.toml  build.rs  lib.rs  runtime.rs
wasm_tools/: README.md
(+24 files in other folders)
