[workspace]
members = [
  "./crates/arweave",
  "./crates/cli",
  "./crates/evm",
  "./crates/executor",
  "./crates/js",
  "./crates/metering",
  "./crates/smartweave",
  "./crates/wasm",
  "./tools/benchmarks/3em",
]
exclude = [
  # Rust WASM proc_macro helper.
  "./helpers/rust/",
  # Node API bindings
  "./js/napi",
]
resolver = "2"

[profile.release]
lto = true

[profile.release.package.bench]
opt-level = 3
codegen-units = 1

