[workspace]
members = [
  "./crates/arweave",
  "./crates/cli",
  "./crates/evm",
  "./crates/executor",
  "./crates/js",
  "./crates/metering",
  "./crates/smartweave",
  "./crates/wasm",
  "./crates/exm",
  "./tools/benchmarks/3em",
]
exclude = [
  # Rust WASM proc_macro helper.
  "./wasm_tools/rust/",
  # Node API bindings
  "./js/napi",
]
resolver = "2"

[profile.release]
lto = true

[profile.release.package.bench]
opt-level = 3
codegen-units = 1

