[package]
name = "three_em"
version = "0.2.0"
authors = ["andreespirela <andreespirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
tokio = { version = "1.10.1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
v8 = "0.38.1"
async-recursion = "1.0.0" 
deno_core = "0.116.0"
deno_crypto = "0.48.0"
deno_web = "0.65.0"
deno_url = "0.34.0"
deno_webidl = "0.34.0"
sha2 = "0.9.5"
serde = { version = "1", features = ["derive"] }
base64 = "0.13.0"
bytes = "1.1.0"
local_ipaddress = "0.1.3"
hex = "0.4.3"
dirs = "4.0"
once_cell = "1.9.0"
indexmap = { version = "1.6.2", features = ["serde-1"] }
libc = "0.2.119"
lru = "0.7.2"
wasmparser = "0.81.0"
wasm-encoder = "0.8.0"
primitive-types = { default-features = false, version = "0.10.1" }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[build-dependencies]
tokio = { version = "1.10.1", features = ["full"] }
deno_core = "0.116.0"
deno_crypto = "0.48.0"
deno_url = "0.34.0"
deno_web = "0.65.0"
deno_webidl = "0.34.0"
serde = { version = "1", features = ["derive"] }
hex-literal = "0.3.4"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.10.1", features = ["full"] }
deno_core = "0.116.0"
deno_crypto = "0.48.0"
deno_url = "0.34.0"
deno_web = "0.65.0"
deno_webidl = "0.34.0"
serde = { version = "1", features = ["derive"] }
hex-literal = "0.3.4"
hex = "0.4.3"