[package]
name = "three_em_arweave"
version = "0.2.0"
authors = ["andreespirela <andreespirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
deno_core = "0.116.0"
sha2 = "0.9.5"
serde = { version = "1", features = ["derive"] }
base64 = "0.13.0"
bytes = "1.1.0"
local_ipaddress = "0.1.3"
hex = "0.4.3"
dirs = "4.0"
once_cell = "1.9.0"
indexmap = { version = "1.6.2", features = ["serde-1"] }
lru = "0.7.2"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }