[package]
name = "three_em"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"

[[bin]]
name = "three_em"
path = "main.rs"

[dependencies]
v8 = "0.34.0"
deno_core = "0.107.0"
deno_crypto = "0.39.0"
base64 = "*"
tokio = { version = "1.10.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
three_em_executor = { path = "../executor" }
three_em_arweave = { path = "../arweave" }
async-trait = "0.1.51"
pico-args = "0.4.2"
colored = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
local_ipaddress = "0.1.3"
rsa = "0.5.0"
sha2 = "0.9.5"
serde_json = "1"
