[package]
name = "three_em_cli"
version = "0.2.0"
authors = ["andreespirela <andreespirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[[bin]]
name = "three_em"
path = "main.rs"

[dependencies]
v8 = "0.38.1"
deno_core = "0.116.0"
deno_crypto = "0.48.0"
base64 = "0.13.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
three_em_executor = { version = "0.2.0", path = "../executor" }
three_em_arweave = { version = "0.2.0", path = "../arweave" }
async-trait = "0.1.52"
pico-args = "0.4.2"
colored = "2"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
local_ipaddress = "0.1.3"
rsa = "0.5.0"
sha2 = "0.9.5"
serde_json = "1"
hex = "0.4.3"
indexmap = { version = "1.7.0", features = ["serde-1"] }
indoc = "1.0"
routerify = "3"
hyper = "0.14"
url = "2.2.2"