[package]
name = "three_em_evm"
version = "0.2.0"
authors = ["andreespirela <andreespirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
primitive-types = { default-features = false, version = "0.12.2" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
evm = "0.41.1"
hex = "0.4.3"
tokio = { version = "1.10.1", features = ["full"] }

[dev-dependencies]
hex-literal = "0.3.4"
hex = "0.4.3"
