[package]
name = "three_em_executor"
version = "0.2.0"
authors = ["andreespirela <andreespirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
deno_core = "0.116.0"
sha2 = "0.10.2"
serde = { version = "1", features = ["derive"] }
three_em_smartweave = { version = "0.2.0", path = "../smartweave" }
three_em_js = { version = "0.2.0", path = "../js" }
three_em_wasm = { version = "0.2.0", path = "../wasm" }
three_em_evm = { version = "0.2.0", path = "../evm" }
tokio = { version = "1.10.1", features = ["full"] }
async-recursion = "1.0.0" 
three_em_arweave = { version = "0.2.0", path = "../arweave" }
base64 = "0.13.0"
hex = "0.4.3"
indexmap = "1.7.0"
libc = "0.2.119"
lru = "0.7.2"
once_cell = "1.9.0"
