[package]
name = "three_em_js"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
build = "build.rs"

[lib]
path = "lib.rs"

[dependencies]
v8 = "0.34.0"
deno_core = "0.107.0"
deno_crypto = "0.39.0"
deno_url = "0.25.0"
deno_web = "0.56.0"
deno_webidl = "0.25.0"
tokio = { version = "1.10.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
three_em_smartweave = { path = "../smartweave" }

[build-dependencies]
v8 = "0.34.0"
deno_core = "0.107.0"
deno_crypto = "0.39.0"
deno_url = "0.25.0"
deno_web = "0.56.0"
deno_webidl = "0.25.0"
serde = { version = "1", features = ["derive"] }
