[package]
name = "three_em_js"
version = "0.2.0"
authors = ["andreespirela <andreespirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
build = "build.rs"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
v8 = "0.38.1"
deno_core = "0.116.0"
deno_crypto = "0.48.0"
deno_url = "0.34.0"
deno_web = "0.65.0"
deno_webidl = "0.34.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
three_em_smartweave = { version = "0.2.0", path = "../smartweave" }

[build-dependencies]
v8 = "0.38.1"
deno_core = "0.116.0"
deno_crypto = "0.48.0"
deno_url = "0.34.0"
deno_web = "0.65.0"
deno_webidl = "0.34.0"
serde = { version = "1", features = ["derive"] }
three_em_smartweave = { version = "0.2.0", path = "../smartweave" }