[package]
name = "three_em_js"
version = "0.2.0"
authors = ["andreespirela <andreespirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
build = "build.rs"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
v8 = "0.47.1"
deno_core = "0.147.0"
deno_crypto = "0.79.0"
deno_url = "0.65.0"
deno_web = "0.96.0"
deno_webidl = "0.65.0"
deno_fetch = "0.88.0"
tokio = { version = "1.10.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
three_em_smartweave = { version = "0.2.0", path = "../smartweave" }
three_em_exm_base_ops = { version = "0.1.0", path = "../exm" }
deno_ops = "0.25.0"
deno_tls = "0.52.0"

[build-dependencies]
v8 = "0.47.1"
deno_core = "0.147.0"
deno_crypto = "0.79.0"
deno_url = "0.65.0"
deno_web = "0.96.0"
deno_webidl = "0.65.0"
deno_fetch = "0.88.0"
deno_ops = "0.25.0"
deno_tls = "0.52.0"
serde = { version = "1", features = ["derive"] }
three_em_smartweave = { version = "0.2.0", path = "../smartweave" }
three_em_exm_base_ops = { version = "0.1.0", path = "../exm" }