[package]
name = "three_em_smartweave"
version = "0.2.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A blazingly fast, secure, reliable, multi-language execution machine for Smart Contracts."
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
v8 = "0.38.1"
deno_core = "0.116.0"
deno_crypto = "0.48.0"
deno_web = "0.65.0"
deno_url = "0.34.0"
deno_webidl = "0.34.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
three_em_arweave = { version = "0.2.0", path = "../arweave" }
lazy_static = "1.2.0"
