[package]
name = "three_em_wasm"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
path = "lib.rs"

[dependencies]
v8 = "0.34.0"
deno_core = "0.107.0"
serde = { version = "1", features = ["derive"] }
three_em_smartweave = { path = "../smartweave" }
three_em_js = { path = "../js" }

[dev-dependencies]
tokio = { version = "1.10.1", features = ["full"] }
