[package]
name = "wasm_test3"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>", "Andres Pirela <andreespirela@outlook.com>"]
description = "A simple WASM contract"
edition = "2018"

[lib]
name = "03_wasm"
path = "03_wasm.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true

[workspace]
members = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
