[package]
name = "bench"
version = "0.1.0"
authors = ["andresspirela <abdresspirela@outlook.com>", "Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2021"

[[bin]]
name = "bench_fh"
path = "main_fh.rs"

[[bin]]
name = "bench"
path = "main.rs"

[[bin]]
name = "bench_lru"
path = "js_mem.rs"

[[bin]]
name = "bench_wasm"
path = "wasm.rs"

[[bin]]
name = "bench_evm"
path = "evm.rs"

[dependencies]
three_em_executor = { version = "0.2.0", path = "../../../crates/executor" }
three_em_arweave = { version = "0.2.0", path = "../../../crates/arweave" }
tokio = { version = "1.16.1", features = ["full"] }

