[package]
name = "wasm_test1"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
description = "A simple WASM contract"
edition = "2018"

[lib]
name = "01_wasm"
path = "01_wasm.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"